# subtitle-clip-studio

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: corpus.toml  media_map.toml
subtitle_clipper/: __init__.py  __main__.py  audio.py  clips.py  config.py  corpus.py  datasets.py  ffmpeg.py  manifest.py  search.py  settings.py  srt.py
subtitle_clipper/webapp/: __init__.py  server.py
subtitle_clipper/webapp/static/: app.js  index.html  style.css
tests/: test_clipper_audio.py  test_clipper_clips.py  test_clipper_corpus_browse.py  test_clipper_datasets.py  test_clipper_search.py  test_clipper_settings.py
